--- a/SpringBoot/ex2/build.gradle
+++ b/SpringBoot/ex2/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
 
+    annotationProcessor('org.projectlombok:lombok')
+
 }
 
 test {
