Update 0121 springBoot part1 Review

--- a/SpringBoot/miniProject/src/main/resources/application.properties
+++ b/SpringBoot/miniProject/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 application.properties
 
+#JPA 설정 | datasource가 DB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/bootex
 spring.datasource.username=bootuser
@@ -10,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 spring.thymeleaf.cache=false
+
+#server.port=8081
